syntax = "proto3";

package calculator;

option go_package = "./calculator/calculatorpb";

message SumRequest{
  int64 num1 = 1;
  int64 num2 = 2;
}

message SumResponse{
  int64 res = 1;
}

message PrimeNumberRequest{
  int64 num = 1;
}

message StreamPrimeNumberResponse{
  int64 res = 1;
}

message ComputeAverageRequest{
  int64 num = 1;
}

message ComputeAverageResponse{
  double res = 1;
}

message FindMaximumRequest{
  int64 num = 1;
}

message FindMaximumResponse{
  int64 res = 1;
}

message SquareRootRequest{
  int32 num = 1;
}

message SquareRootResponse{
  double res = 1;
}

service CalculatorService{
  rpc SumTwoNumbers(SumRequest) returns (SumResponse){};

  rpc PrimeNumberDecomposition(PrimeNumberRequest) returns(stream StreamPrimeNumberResponse){};

  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};

  rpc FindMaximum(stream FindMaximumRequest) returns(stream FindMaximumResponse){};

  rpc SquareRoot(SquareRootRequest) returns(SquareRootResponse){};
}

